--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,16 @@
     "bootstrap": "^4.1.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
+    "ember-angle-bracket-invocation-polyfill": "^1.2.3",
     "ember-bootstrap": "^2.1.0",
+    "ember-bootstrap-power-select": "^1.0.0-rc.1",
     "ember-cli": "~3.3.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^8.0.1",
@@ -35,10 +37,14 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~3.3.0",
+    "ember-data-power-select": "^1.1.0",
     "ember-django-adapter": "^2.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-datepicker": "^0.5.2",
+    "ember-power-select": "^2.0.8",
+    "ember-power-select-blockless": "^0.5.0",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.7.0",
     "ember-simple-auth-token": "^4.0.4",
