--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "build": "ember build",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "ember test",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "broccoli-asset-rev": "^2.7.0",
+    "cypress": "^3.1.0",
     "ember-ajax": "^3.0.0",
     "ember-angle-bracket-invocation-polyfill": "^1.2.3",
     "ember-bootstrap": "^2.1.0",
