--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:verify": "cypress verify",
+    "cypress:run": "cypress run"
   },
   "devDependencies": {
     "bootstrap": "^4.1.3",
@@ -52,6 +54,7 @@
     "ember-simple-auth-token": "^4.0.4",
     "ember-source": "~3.3.0",
     "ember-welcome-page": "^3.0.0",
+    "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
     "qunit-dom": "^0.6.2",
