--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,28 @@
----
 language: python
 python:
-  - "3.6"
+- '3.6'
 node:
- - "10.8"
-
+- '10.8'
 sudo: false
 dist: trusty
-
 cache:
   directories:
-    - $HOME/.npm
-    - $HOME/.cache
-
+  - "$HOME/.npm"
+  - "$HOME/.cache"
 env:
   global:
-    # See https://git.io/vdao3 for details.
-    - JOBS=1
-
+  - JOBS=1
 before_install:
-  - npm config set spin false
-
+- openssl aes-256-cbc -K $encrypted_a26860948143_key -iv $encrypted_a26860948143_iv
+  -in deploy_key.enc -out deploy_key -d
+- npm config set spin false
 install:
-  - pip install -r requirements.pip
-  - cd frontend && npm i -g npm@6.4 && npm ci && cd ../
-
+- pip install -r requirements.pip
+- cd frontend && npm i -g npm@6.4 && npm ci && cd ../
 script:
-  - python manage.py runserver --nothreading >> /dev/null &
-  - cd frontend
-  - npm run lint:js
-  - npm start >> /dev/null &
-  - npm run cypress:run
-  - kill $(jobs -p) || true
+- python manage.py runserver --nothreading >> /dev/null &
+- cd frontend
+- npm run lint:js
+- npm start >> /dev/null &
+- npm run cypress:run
+- kill $(jobs -p) || true
